# Native_SDK

build-android/: settings.gradle
cmake/modules/: FindX11_XCB.cmake  FindXCB.cmake
examples/OpenCL/: CMakeLists.txt
examples/OpenCL/PrefixSum/: CMakeLists.txt  OpenCLPrefixSum.cpp  README.rst  kernel.cl
examples/OpenCL/PrefixSum/build-android/: settings.gradle
examples/OpenCL/PrefixSum/build-android/src/main/: AndroidManifest.xml
examples/OpenGLES/01_HelloAPI/: OpenGLESHelloAPI_QNXScreen.cpp
examples/OpenGLES/ImageBasedLighting/: OpenGLESImageBasedLighting.cpp
examples/Vulkan/: CMakeLists.txt
examples/Vulkan/01_HelloAPI/: MainLinuxWayland.cpp
examples/Vulkan/AmbientOcclusion/: VulkanAmbientOcclusion.cpp
examples/Vulkan/HybridTransparency/: VulkanHybridTransparency.cpp
examples/Vulkan/RayTracedHardShadows/: VulkanRayTracedHardShadows.cpp
examples/Vulkan/TimelineSemaphores/: VulkanTimelineSemaphores.cpp
examples/Vulkan/YCbCrTextureSampling/: CMakeLists.txt  FragShader.fsh  README.rst  VertShader.vsh  VulkanYCbCrTextureSampling.cpp
examples/Vulkan/YCbCrTextureSampling/build-android/: build.gradle  settings.gradle
examples/Vulkan/YCbCrTextureSampling/build-android/src/main/: AndroidManifest.xml
examples/Vulkan/YCbCrTextureSampling/build-android/src/main/java/com/powervr/VulkanYCbCrTextureSampling/: VulkanYCbCrTextureSampling.java
examples/Vulkan/YCbCrTextureSampling/build-android/src/main/res/values/: strings.xml
examples/assets/YCbCrTextureSampling/: ColourTest2_YUV_2-Plane_420_UNorm_sRGB_NV12.pvr  ColourTest2_YUV_2-Plane_422_UNorm_sRGB_P208.pvr  ColourTest2_YUV_3-Plane_420_UNorm_sRGB.pvr  ColourTest2_YUV_3-Plane_422_UNorm_sRGB.pvr  ColourTest2_YUV_3-Plane_444_UNorm_sRGB.pvr
framework/PVRShell/: Shell.cpp  Shell.h  ShellData.h  StateMachine.cpp
framework/PVRUtils/Vulkan/: HelperVk.cpp  HelperVk.h
framework/PVRVk/: CMakeLists.txt  CommandPoolVk.cpp  CommandPoolVk.h  DeviceVk.cpp  DeviceVk.h  ExtensionsVk.h  GraphicsPipelineVk.h  HeadersVk.h  InstanceVk.cpp  InstanceVk.h  PopulateCreateInfoVk.h  QueueVk.h  RenderPassVk.cpp  TypesVk.h  VulkanBase.cpp  VulkanBase.h  pvrvk_vulkan_sc_minimal_wrapper.h  pvrvk_vulkan_wrapper.h
include/: sdkver.h
include/vulkan/: vulkan_core.h
include/vulkan_sc_minimal/: vulkan_sc_core_minimal.h
lib/Windows_x86_64/: libEGL.lib  libGLES_CM.lib  libGLESv2.lib
